// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters ChapterFilter matches snapshot when it is closed 1`] = `
.c9 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c8 {
  cursor: pointer;
}

.c2 > *:not(.c7) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c4 {
  overflow: visible;
  position: relative;
}

.c5 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
}

.c10 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
}

.c6 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
}

.c6 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
  width: 100%;
}

.c0 {
  position: relative;
  z-index: 2;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #fff;
  border-bottom: 0.1rem solid #d5d5d5;
}

.c0 .c7 {
  font-weight: bold;
}

.c0 .c3 > *:not(.c7) {
  top: calc(100% - 0.1rem);
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  max-height: calc(100vh - 26rem);
}

@media screen and (max-width:75em) {
  .c6 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 .c3 > *:not(.c7) {
    max-height: calc(100vh - 18.4rem);
  }
}

@media screen and (max-width:30em) {
  .c0 .c3 {
    position: initial;
  }

  .c0 .c3 > *:not(.c7) {
    top: auto;
    margin-top: -0.1rem;
  }
}

@media print {
  .c0 {
    padding-left: 0;
  }
}

@media print {
  .c0 > *:not(.FiltersList-sc-1sdnk9e-4) {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3 c4"
    >
      <button
        aria-controls="practice-filter-chapter"
        aria-expanded={false}
        aria-label="Filter PQ by Chapter & Section"
        className="c5 c6 c7 c8"
        data-analytics-label="Filter PQ by Chapter & Section"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          Chapter & Section
          <svg
            aria-hidden="true"
            className="c9 c10"
            direction="down"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Filters ChapterFilter matches snapshot when open with selected section 1`] = `
.c9 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c8 {
  cursor: pointer;
}

.c2 > *:not(.c7) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c4 {
  overflow: visible;
  position: relative;
}

.c5 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
}

.c21 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
}

.c11 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  padding-top: 0;
  padding-bottom: 0.2rem;
}

.c13 {
  padding: 0;
  border: none;
  margin: 0;
}

.c13 legend {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

.c6 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
  z-index: 2;
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  -webkit-clip-path: inset(0 -0.6rem 0px -0.6rem);
  clip-path: inset(0 -0.6rem 0px -0.6rem);
  background-color: #fff;
  border-left: 0.1rem solid #d5d5d5;
  border-right: 0.1rem solid #d5d5d5;
}

.c6 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
  width: 100%;
}

.c0 {
  position: relative;
  z-index: 2;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #fff;
  border-bottom: 0.1rem solid #d5d5d5;
}

.c0 .c7 {
  font-weight: bold;
}

.c0 .c3 > *:not(.c7) {
  top: calc(100% - 0.1rem);
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  max-height: calc(100vh - 26rem);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-x: hidden;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  margin-left: 0.8rem;
}

.c20 > * {
  overflow: hidden;
}

.c20 .os-text {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-overflow: ellipsis;
}

.c20 .os-divider {
  margin: 0 0.4rem;
}

.c17 {
  width: 400px;
  border-bottom: 1px solid #d5d5d5;
  overflow: visible;
}

.c18 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
  display: block;
  width: 100%;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c18 .c19 {
  float: left;
  margin-left: 0;
  text-align: left;
}

.c18 .c10 {
  float: right;
}

.c18::after {
  content: "";
  display: table;
  clear: both;
}

.c23 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  width: 100%;
  text-align: left;
  font-size: 1.4rem;
  color: #424242;
}

.c23[aria-current="true"] {
  color: #027EB5;
}

.c23:hover,
.c23:focus {
  background-color: #f1f1f1;
  color: #0064A0;
}

.c23 .c19 {
  padding-left: 2.5rem;
  width: 95%;
}

.c22 {
  overflow: visible;
}

.c12 {
  color: #424242;
  background: #fff;
  font-size: 1.4rem;
  padding: 0.8rem 1.6rem;
  outline: none;
  overflow: auto;
  z-index: 1;
  padding: 0;
}

.c12 .c24 {
  margin: 0.8rem 0 0.8rem 0.8rem;
}

.c12 .c25 {
  padding: 0.8rem;
}

.c12 .c26 {
  margin: 0 1.6rem 0 1.6rem;
}

.c12 .c16:last-child {
  border-bottom: none;
}

@media screen and (max-width:75em) {
  .c6 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 .c3 > *:not(.c7) {
    max-height: calc(100vh - 18.4rem);
  }
}

@media screen and (max-width:30em) {
  .c0 .c3 {
    position: initial;
  }

  .c0 .c3 > *:not(.c7) {
    top: auto;
    margin-top: -0.1rem;
  }
}

@media print {
  .c0 {
    padding-left: 0;
  }
}

@media print {
  .c0 > *:not(.FiltersList-sc-1sdnk9e-4) {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c14 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    overflow: hidden;
  }
}

@media screen and (max-width:30em) {
  .c17 {
    width: 100%;
  }
}

@media screen and (max-width:30em) {
  .c12 {
    width: calc(100vw - 1.6rem);
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3 c4"
    >
      <button
        aria-controls="practice-filter-chapter"
        aria-expanded={true}
        aria-label="Filter PQ by Chapter & Section"
        className="c5 c6 c7 c8"
        data-analytics-label="Filter PQ by Chapter & Section"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          Chapter & Section
          <svg
            aria-hidden="true"
            className="c9 c10 c11"
            direction="up"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
      <div
        className="c12"
        id="practice-filter-chapter"
        tabIndex={-1}
      >
        <fieldset
          className="c13"
        >
          <legend>
            Filter by chapters
          </legend>
          <div
            className="c14"
          >
            <ul
              aria-label="Filter by chapters"
              className="c15"
            >
              <li>
                <div
                  className="c16 c17"
                  open={false}
                >
                  <button
                    aria-controls="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                    aria-expanded={false}
                    className="c18"
                    onClick={[Function]}
                  >
                    <span
                      className="c19 c20"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "chapterId",
                        }
                      }
                    />
                    <svg
                      aria-hidden="true"
                      className="c9 c10 c21"
                      direction="down"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 320 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </li>
              <li>
                <div
                  className="c16 c17"
                  open={true}
                >
                  <button
                    aria-controls="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                    aria-expanded={true}
                    className="c18"
                    onClick={[Function]}
                  >
                    <span
                      className="c19 c20"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "chapterId2",
                        }
                      }
                    />
                    <svg
                      aria-hidden="true"
                      className="c9 c10 c11"
                      direction="up"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 320 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                  <div
                    className="c22"
                    id="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                  >
                    <button
                      aria-current="true"
                      aria-label="Filter PQ by  section21"
                      className="c23"
                      data-analytics-label="Filter PQ by  section21"
                      onClick={[Function]}
                    >
                      <span
                        className="c19 c20"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "section21",
                          }
                        }
                      />
                    </button>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filters ChapterFilter matches snapshot when open without selected section 1`] = `
.c9 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c8 {
  cursor: pointer;
}

.c2 > *:not(.c7) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c4 {
  overflow: visible;
  position: relative;
}

.c5 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
}

.c21 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
}

.c11 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  padding-top: 0;
  padding-bottom: 0.2rem;
}

.c13 {
  padding: 0;
  border: none;
  margin: 0;
}

.c13 legend {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

.c6 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
  z-index: 2;
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  -webkit-clip-path: inset(0 -0.6rem 0px -0.6rem);
  clip-path: inset(0 -0.6rem 0px -0.6rem);
  background-color: #fff;
  border-left: 0.1rem solid #d5d5d5;
  border-right: 0.1rem solid #d5d5d5;
}

.c6 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
  width: 100%;
}

.c0 {
  position: relative;
  z-index: 2;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #fff;
  border-bottom: 0.1rem solid #d5d5d5;
}

.c0 .c7 {
  font-weight: bold;
}

.c0 .c3 > *:not(.c7) {
  top: calc(100% - 0.1rem);
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  max-height: calc(100vh - 26rem);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-x: hidden;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  margin-left: 0.8rem;
}

.c20 > * {
  overflow: hidden;
}

.c20 .os-text {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-overflow: ellipsis;
}

.c20 .os-divider {
  margin: 0 0.4rem;
}

.c17 {
  width: 400px;
  border-bottom: 1px solid #d5d5d5;
  overflow: visible;
}

.c18 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
  display: block;
  width: 100%;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c18 .c19 {
  float: left;
  margin-left: 0;
  text-align: left;
}

.c18 .c10 {
  float: right;
}

.c18::after {
  content: "";
  display: table;
  clear: both;
}

.c12 {
  color: #424242;
  background: #fff;
  font-size: 1.4rem;
  padding: 0.8rem 1.6rem;
  outline: none;
  overflow: auto;
  z-index: 1;
  padding: 0;
}

.c12 .c22 {
  margin: 0.8rem 0 0.8rem 0.8rem;
}

.c12 .c23 {
  padding: 0.8rem;
}

.c12 .c24 {
  margin: 0 1.6rem 0 1.6rem;
}

.c12 .c16:last-child {
  border-bottom: none;
}

@media screen and (max-width:75em) {
  .c6 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 .c3 > *:not(.c7) {
    max-height: calc(100vh - 18.4rem);
  }
}

@media screen and (max-width:30em) {
  .c0 .c3 {
    position: initial;
  }

  .c0 .c3 > *:not(.c7) {
    top: auto;
    margin-top: -0.1rem;
  }
}

@media print {
  .c0 {
    padding-left: 0;
  }
}

@media print {
  .c0 > *:not(.FiltersList-sc-1sdnk9e-4) {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c14 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    overflow: hidden;
  }
}

@media screen and (max-width:30em) {
  .c17 {
    width: 100%;
  }
}

@media screen and (max-width:30em) {
  .c12 {
    width: calc(100vw - 1.6rem);
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3 c4"
    >
      <button
        aria-controls="practice-filter-chapter"
        aria-expanded={true}
        aria-label="Filter PQ by Chapter & Section"
        className="c5 c6 c7 c8"
        data-analytics-label="Filter PQ by Chapter & Section"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          Chapter & Section
          <svg
            aria-hidden="true"
            className="c9 c10 c11"
            direction="up"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
      <div
        className="c12"
        id="practice-filter-chapter"
        tabIndex={-1}
      >
        <fieldset
          className="c13"
        >
          <legend>
            Filter by chapters
          </legend>
          <div
            className="c14"
          >
            <ul
              aria-label="Filter by chapters"
              className="c15"
            >
              <li>
                <div
                  className="c16 c17"
                  open={false}
                >
                  <button
                    aria-controls="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                    aria-expanded={false}
                    className="c18"
                    onClick={[Function]}
                  >
                    <span
                      className="c19 c20"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "chapterId",
                        }
                      }
                    />
                    <svg
                      aria-hidden="true"
                      className="c9 c10 c21"
                      direction="down"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 320 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </li>
              <li>
                <div
                  className="c16 c17"
                  open={false}
                >
                  <button
                    aria-controls="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                    aria-expanded={false}
                    className="c18"
                    onClick={[Function]}
                  >
                    <span
                      className="c19 c20"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "chapterId2",
                        }
                      }
                    />
                    <svg
                      aria-hidden="true"
                      className="c9 c10 c21"
                      direction="down"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 320 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
